feat: frontend for minimal CRUD
